tests/ui/mutation/ops/bool_expr_negate/rustc_res/cannot_infer_negated_generic_call.rs
//@ fail
//@ stderr

fn f() {
    let _: bool = !Default::default();
}

#[test]
fn test() {
    f();
}
